# Universal-File-Zip

./: CMakeLists.txt  LICENSE  main.cpp
include/: Tools.h
install/Lnx/: install.sh
install/Win/: install.bat
